# Synapse

./: .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  deny.toml
STATE/: CURRENT_STATE.md  DECISION_LOG.md  HEARTBEAT.md  RECOVERY_NOTES.md
bench_results/920c6649e18f069995609fe132d532c7cf22b455/: a11y_snapshot_depth2_60elem.md
crates/synapse-a11y/: Cargo.toml
crates/synapse-a11y/benches/: uia_snapshot_depth2_60elem.rs
crates/synapse-a11y/src/: cdp.rs  error.rs  events.rs  ids.rs  lib.rs  re_resolve.rs  snapshot.rs  tests.rs  ui_element.rs  window.rs
crates/synapse-a11y/src/platform/: mod.rs  non_windows.rs
crates/synapse-a11y/src/platform/windows/: common.rs  events.rs  mod.rs  resolve.rs  snapshot.rs  window.rs
crates/synapse-action/: Cargo.toml
crates/synapse-hid-host/: Cargo.toml
crates/synapse-mcp/: Cargo.toml
crates/synapse-models/: Cargo.toml
crates/synapse-reflex/: Cargo.toml
crates/synapse-reflex/src/: action_combo_bridge.rs  conflict.rs  dispatch.rs  error.rs  lib.rs  lifecycle.rs  listing.rs  runtime.rs  scheduler.rs  scheduler_combo.rs  scheduler_loop.rs  scheduler_stateful.rs  scheduler_tick.rs  storage.rs  tests.rs
crates/synapse-reflex/src/kinds/: aim_track.rs  combo.rs  hold_button.rs  hold_move.rs
crates/synapse-reflex/tests/: aim_track_behavior.rs  combo_behavior.rs  scheduler_behavior.rs
crates/synapse-storage/: Cargo.toml
crates/synapse-test-utils/: Cargo.toml
docs/: AICodingAgentSuperPrompt.md  browser-perception.md  dev-host-hygiene.md  motion-semantics.md
firmware/: README.md
scripts/: manual_mcp_stdio_probe.py  synapse-install.sh  synapse-setup.ps1
(+395 files in other folders)
