[package]
name = "synapse-reflex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
crossbeam.workspace = true
serde.workspace = true
synapse-action = { version = "0.1.0", path = "../synapse-action" }
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-storage = { version = "0.1.0", path = "../synapse-storage" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
